--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sponsorslides</title>
     <script src="sponsorslides.js"></script>
+    <link rel="stylesheet" href="sponsorslides.css" />
 </head>
 <body>
 
