added less css simple anim on hover

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <title>Sponsorslides</title>
     <script src="sponsorslides.js"></script>
-    <link rel="stylesheet" href="sponsorslides.css" />
+    <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
+<section class="sponsors">
+    <section class="silver">
 
-<div id="sponsors"></div>
+        <figure>
+            <img src="logos/silver/42talents.svg"/>
+        </figure>
+        <figure>
+            <img src="logos/silver/adcubum.png"/>
+        </figure>
+        <figure>
+            <img src="logos/silver/adesso.png"/>
+        </figure>
+    </section>
+</section>
 
 </body>
 </html>
