simple anim working

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <figure>
             <img src="logos/silver/adesso.png"/>
         </figure>
+        <figure>
+            <img src="logos/silver/adnovum.svg"/>
+        </figure>
     </section>
 </section>
 
