--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Sponsorslides</title>
-    <script src="sponsorslides.js"></script>
-    <link rel="stylesheet" href="css/main.css" />
+
+    <link rel="stylesheet/less" type="text/css" href="less/sample.less" />
 </head>
 <body>
 <section class="sponsors">
@@ -24,6 +24,6 @@
         </figure>
     </section>
 </section>
-
+<script src="node_modules/less/dist/less.js"></script>
 </body>
 </html>
